# sui-nautilus

./: .gitignore  Cargo.toml  Containerfile  ENV_SETUP.md  EXTERNAL_SERVICES_SETUP.md  LICENSE  Makefile  README.md  configure_enclave.sh  env.example  expose_enclave.sh
nodejs-task/: index.js  package.json  task-output.txt
scripts/: create-secrets.sh  env-helper.sh  test-secrets-integration.sh
src/nautilus-server/: Cargo.toml  TASK_RUNNER_INTEGRATION.md  allowed_endpoints.yaml  run.sh
src/nautilus-server/src/: app.rs  common.rs  lib.rs  main.rs  task_runner.rs
src/nautilus-server/src/nodejs-task/: .env.example  MESSAGE_PROCESSING_FLOW.md  index.js  package-lock.json  package.json  test-env.js
src/nautilus-server/src/nodejs-task/services/blockchain/: seal-operations.js  sui-operations.js  walrus-operations.js
src/nautilus-server/src/nodejs-task/services/data-refinement/: base-refinement.js  chat-refinement.js
src/nautilus-server/src/nodejs-task/services/embedding/: azure-text-embedding.js  base-embedding.js  ollama-embedding.js
src/nautilus-server/src/nodejs-task/services/factory/: config.js  service-factory.js
src/nautilus-server/src/nodejs-task/services/processors/: message-processor.js
src/nautilus-server/src/nodejs-task/services/vector-db/: base-vector-db.js  qdrant-service.js
src/nautilus-server/src/nodejs-task/utils/: id-unmasker.js  logger.js  rate-limiter.js  summary-reporter.js
src/task-runner/: Cargo.toml  README.md
src/task-runner/src/: main.rs
